# c-design

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  compile_commands.json
asan/: CMakeLists.txt  leak.c
atomics/: CMakeLists.txt  README.md  acquire_release.c
cmake/: CompilationDatabase.cmake  Cppcheck.cmake  GccCustomTargets.cmake  GccOptions.cmake  Unity.cmake
doc/: light_reading.md  linux_memory_barriers.md  signal_flag_bad_O0.lst  signal_flag_bad_O1.lst  signal_flag_bad_O2.lst  signal_flag_bad_O3.lst
epoll/examples/: CMakeLists.txt  my_epoll_empty.c  my_epoll_event_empty.c  my_epoll_event_intro.c  sys_epoll.c  sys_epoll_empty.c
epoll/include/: my_epoll.h  my_epoll_event.h
epoll/src/: my_epoll.c  my_epoll_event.c
event_loop/: CMakeLists.txt  hard_poll_no_queue.c
eventfd/examples/: CMakeLists.txt  my_eventfd_blocking.c  my_eventfd_nonblocking.c
eventfd/include/: my_eventfd.h  my_eventfd_sem.h
hash_tables/: README.md
hash_tables/intro/: CMakeLists.txt  README.md  hash_table.c  hash_table.h  hash_table1.c  hash_table1.h  hash_table2.c  hash_table2.h  hash_table_intro.c  hash_table_intro1.c  hash_table_intro2.c
hash_tables/python/: README.md
hsearch/: CMakeLists.txt  README.md
hsearch/examples/: CMakeLists.txt  sys_hsearch.c  sys_hsearch_binary.c  sys_hsearch_r.c
my_epoll/: CMakeLists.txt
my_epoll/examples/: CMakeLists.txt  sys_epoll_empty.c
my_epoll/include/: my_epoll.h  my_epoll_event.h
my_epoll/src/: my_epoll.c  my_epoll_event.c
my_eventfd/: CMakeLists.txt  todo.txt
my_eventfd/examples/: CMakeLists.txt  eventfd_blocking.c  eventfd_blocking_multi.c  eventfd_nonblocking.c  my_eventfd_blocking_multi.c
my_eventfd/src/: my_eventfd.c  my_eventfd_sem.c
my_pthread/: CMakeLists.txt
my_pthread/include/: my_pthread.h
my_pthread/src/: my_pthread.c
my_signal/: CMakeLists.txt  README.md
my_signal/examples/: my_signal_wait2.c  sigmask_single_thread.c
my_signal/include/: my_signal.h
my_signal/src/: my_signal.c
my_timerfd/: CMakeLists.txt  README.md
my_timerfd/examples/: CMakeLists.txt  timerfd_blocking.c
my_timerfd/include/: my_timerfd.h
pthread/: CMakeLists.txt
pthread/include/: my_pthread.h
pthread/src/: my_pthread.c
shared_state/: CMakeLists.txt  TODO.md  api_race_gnuc_sync.c  api_race_stdatomic.c  api_race_stdatomic_fence.c  api_race_volatile.c
signal/: CMakeLists.txt
signal/examples/: CMakeLists.txt  my_signal_wait.c  signal_flag_bad.c  signal_flag_good.c  signal_wait_multi.c  signal_wait_single.c
signal/include/: my_signal.h
signal/src/: my_signal.c
signalfd/: CMakeLists.txt  README.md
signalfd/examples/: CMakeLists.txt  my_signalfd_wait.c  my_signalfd_wait_multi.c  my_signalfd_wait_single.c  signalfd_wait.c  signalfd_wait_multi.c  signalfd_wait_multi_bad.c  signalfd_wait_single.c
signalfd/include/: my_signalfd.h
signalfd/src/: my_signalfd.c
timerfd/examples/: CMakeLists.txt  my_timerfd_blocking.c  my_timerfd_interval.c  my_timerfd_oneshot.c  my_timerfd_read.c  my_timerfd_remaining.c  timerfd_blocking.c
timerfd/include/: my_timerfd.h
timerfd/src/: my_timerfd.c
tsan/: CMakeLists.txt  signal_unsafe_errno.c  signal_unsafe_function.c
ubsan/: CMakeLists.txt  ubsan_segfault.c
